<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    android:backgroundTint="@color/accent">

    <ImageView
        android:id="@+id/signUpForm"
        android:layout_width="413dp"
        android:layout_height="795dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstFieldPassword"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="484dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/secondFieldPassword"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="584dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="388dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullnameField"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="284dp"
        android:ems="10"
        android:hint="@string/fullname_hint"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signin"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="752dp"
        android:backgroundTint="#F8F8F8"
        android:ems="10"
        android:inputType="text"
        android:text="@string/sign_in"
        android:textColor="@color/link"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AlreadyMember"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="764dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/already_member"
        android:textColor="@color/accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/register"
        android:layout_width="232dp"
        android:layout_height="66dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="656dp"
        android:background="@drawable/button_background"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>