<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"

    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@null"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/form"
        android:layout_width="411dp"
        android:layout_height="809dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@null"
        android:src="@drawable/form__1_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login"
        android:layout_width="232dp"
        android:layout_height="66dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="652dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="584dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/form"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="484dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/notAMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="772dp"
        android:text="@string/not_a_member"
        android:textColor="@color/accent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createAnAccount"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="756dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/create_an_account"
        android:textColor="@color/link"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>